// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtPagination Behavior should not trigger page-change event when disabled 1`] = `
<view
  class="at-pagination"
>
  <view
    class="at-pagination__btn-prev"
  >
    <!--v-if-->
    <view
      class="at-button at-button--small at-button--disabled"
    >
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <view
        class="at-button__text"
      >
        
        上一页
        
      </view>
    </view>
  </view>
  <view
    class="at-pagination__number"
  >
    <text
      class="at-pagination__number-current"
    >
      1
    </text>
    <text>
      /1
    </text>
  </view>
  <view
    class="at-pagination__btn-next"
  >
    <!--v-if-->
    <view
      class="at-button at-button--small at-button--disabled"
    >
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <view
        class="at-button__text"
      >
        
        下一页
        
      </view>
    </view>
  </view>
</view>
`;

exports[`AtPagination should render prop -- current 1`] = `
<view
  class="at-pagination"
>
  <view
    class="at-pagination__btn-prev"
  >
    <!--v-if-->
    <view
      class="at-button at-button--small at-button--disabled"
    >
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <view
        class="at-button__text"
      >
        
        上一页
        
      </view>
    </view>
  </view>
  <view
    class="at-pagination__number"
  >
    <text
      class="at-pagination__number-current"
    >
      2
    </text>
    <text>
      /1
    </text>
  </view>
  <view
    class="at-pagination__btn-next"
  >
    <!--v-if-->
    <view
      class="at-button at-button--small at-button--disabled"
    >
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <view
        class="at-button__text"
      >
        
        下一页
        
      </view>
    </view>
  </view>
</view>
`;

exports[`AtPagination should render prop -- icon 1`] = `
<view
  class="at-pagination at-pagination--icon"
>
  <view
    class="at-pagination__btn-prev"
  >
    <view
      class="at-button at-button--small at-button--disabled"
    >
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <view
        class="at-button__text"
      >
        
        <text
          class="at-icon at-icon-chevron-left"
        />
        
      </view>
    </view>
    <!--v-if-->
  </view>
  <view
    class="at-pagination__number"
  >
    <text
      class="at-pagination__number-current"
    >
      1
    </text>
    <text>
      /1
    </text>
  </view>
  <view
    class="at-pagination__btn-next"
  >
    <view
      class="at-button at-button--small at-button--disabled"
    >
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <view
        class="at-button__text"
      >
        
        <text
          class="at-icon at-icon-chevron-right"
        />
        
      </view>
    </view>
    <!--v-if-->
  </view>
</view>
`;

exports[`AtPagination should render prop -- pageSize 1`] = `
<view
  class="at-pagination"
>
  <view
    class="at-pagination__btn-prev"
  >
    <!--v-if-->
    <view
      class="at-button at-button--small at-button--disabled"
    >
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <view
        class="at-button__text"
      >
        
        上一页
        
      </view>
    </view>
  </view>
  <view
    class="at-pagination__number"
  >
    <text
      class="at-pagination__number-current"
    >
      1
    </text>
    <text>
      /1
    </text>
  </view>
  <view
    class="at-pagination__btn-next"
  >
    <!--v-if-->
    <view
      class="at-button at-button--small at-button--disabled"
    >
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <view
        class="at-button__text"
      >
        
        下一页
        
      </view>
    </view>
  </view>
</view>
`;

exports[`AtPagination should render prop -- total 1`] = `
<view
  class="at-pagination"
>
  <view
    class="at-pagination__btn-prev"
  >
    <!--v-if-->
    <view
      class="at-button at-button--small at-button--disabled"
    >
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <view
        class="at-button__text"
      >
        
        上一页
        
      </view>
    </view>
  </view>
  <view
    class="at-pagination__number"
  >
    <text
      class="at-pagination__number-current"
    >
      1
    </text>
    <text>
      /5
    </text>
  </view>
  <view
    class="at-pagination__btn-next"
  >
    <!--v-if-->
    <view
      class="at-button at-button--small"
    >
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <view
        class="at-button__text"
      >
        
        下一页
        
      </view>
    </view>
  </view>
</view>
`;
